# Reasoning-Router

./: .env.example  .gitignore  .langchain_cache.db  README.md  evaluate_gsm8k.py  langgraph.json  pyproject.toml  reasoning_router.py  requirements.txt
assets/: README.md  workflow.drawio
models/strategy_classifier/: config.json  hyperparams.json  labels.json
reasoning_router/: reasoning_router.py  router.py
reasoning_router/evals/: eval_arc.py  eval_gsm8k.py  eval_gsm8k_original.py  eval_logiqa.py  eval_truthfulqa.py  evaluate_gsm8k.py
reasoning_router/scripts/: api_server.py  host_models.py  test_latency.py  train_strategy_classifier.py  tune_hyperparams.py
reasoning_router/utils/: eval_utils.py  llm_utils.py  strategy_selector.py
